@@ -1,6 +1,8 @@
 package ispp_g2.gastrostock.testDueno;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
@@ -11,73 +13,91 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-
-
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
-import org.springframework.security.test.context.support.WithMockUser;
+import org.springframework.security.authentication.AuthenticationProvider;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.test.web.servlet.MockMvc;
-
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
+import ispp_g2.gastrostock.config.SecurityConfiguration;
+import ispp_g2.gastrostock.config.jwt.JwtAuthFilter;
+import ispp_g2.gastrostock.config.jwt.JwtService;
 import ispp_g2.gastrostock.dueno.Dueno;
 import ispp_g2.gastrostock.dueno.DuenoController;
+import ispp_g2.gastrostock.dueno.DuenoDTO;
 import ispp_g2.gastrostock.dueno.DuenoService;
 import ispp_g2.gastrostock.negocio.Negocio;
 import ispp_g2.gastrostock.user.Authorities;
 import ispp_g2.gastrostock.user.User;
+import ispp_g2.gastrostock.user.UserService;
 
-@ExtendWith(SpringExtension.class)
-@ActiveProfiles("test")
 @WebMvcTest(DuenoController.class)
-@WithMockUser(username = "admin", password = "admin", roles = "ADMIN")
-public class DuenoControllerTest {
+@Import({SecurityConfiguration.class, JwtAuthFilter.class})
+@ActiveProfiles("test")
+class DuenoControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
     @MockBean
     private DuenoService duenoService;
+    
+    @MockBean 
+    private UserService userService;
 
-    @InjectMocks
-    private DuenoController duenoController;
+    @MockBean
+    private JwtService jwtService;
 
+    @MockBean
+    private AuthenticationProvider authenticationProvider;
+    
+    @MockBean
+    private UserDetailsService userDetailsService;
+
+    @Autowired
     private ObjectMapper objectMapper;
+
     private Dueno duenoNormal;
     private Dueno duenoConNegocio;
     private Dueno duenoInvalidoSinEmail;
+    private DuenoDTO duenoDTO;
+    private DuenoDTO duenoInvalidoDTO;
     private List<Dueno> duenosList;
+    private List<DuenoDTO> duenosDTOList;
     private User user;
     private Negocio negocio;
-    private Authorities authoriti;
+    private Authorities authority;
+    
+    // Usuario admin para simular la seguridad requerida
+    private User adminUser;
+    private Authorities adminAuthority;
 
     @BeforeEach
     void setUp() {
-
+        // Inicializar ObjectMapper para manejar JSON
         objectMapper = new ObjectMapper();
 
-        authoriti = new Authorities();
-        authoriti.setAuthority("DUEÑO");
+        // Crear autoridad de dueño
+        authority = new Authorities();
+        authority.setId(1);
+        authority.setAuthority("DUENO");
         
-        // Crear usuario para asociar al dueno
+        // Crear usuario dueño
         user = new User();
         user.setId(1);
         user.setUsername("juangarcia");
         user.setPassword("password123");
-        user.setAuthority(authoriti);
-        // Crear usuario para pruebas
-
+        user.setAuthority(authority);
         
-        // Crear un dueno normal
+        // Crear un dueño normal
         duenoNormal = new Dueno();
         duenoNormal.setId(1);
         duenoNormal.setFirstName("Juan");
@@ -97,7 +117,7 @@ public class DuenoControllerTest {
         negocio.setCodigoPostal("41001");
         negocio.setTokenNegocio(12345);
 
-        // Crear un dueno con negocio
+        // Crear un dueño con negocio
         duenoConNegocio = new Dueno();
         duenoConNegocio.setId(2);
         duenoConNegocio.setFirstName("Ana");
@@ -106,25 +126,72 @@ public class DuenoControllerTest {
         duenoConNegocio.setNumTelefono("654321987");
         duenoConNegocio.setTokenDueno("TOKEN456");
         
-        // Asignar el dueno al negocio
+        User user2 = new User();
+        user2.setId(2);
+        user2.setUsername("anamartinez");
+        user2.setPassword("password456");
+        user2.setAuthority(authority);
+        duenoConNegocio.setUser(user2);
         negocio.setDueno(duenoConNegocio);
 
-        // Crear un dueno con datos inválidos (sin email)
+        // Crear un dueño con datos inválidos (sin email)
         duenoInvalidoSinEmail = new Dueno();
         duenoInvalidoSinEmail.setId(3);
         duenoInvalidoSinEmail.setFirstName("Pedro");
         duenoInvalidoSinEmail.setLastName("Pérez");
         duenoInvalidoSinEmail.setNumTelefono("666777888");
         duenoInvalidoSinEmail.setTokenDueno("TOKEN789");
+        
+        User user3 = new User();
+        user3.setId(3);
+        user3.setUsername("pedroperez");
+        user3.setPassword("password789");
+        user3.setAuthority(authority);
+        duenoInvalidoSinEmail.setUser(user3);
 
-        // Lista de duenos para tests
+        // Lista de dueños para tests
         duenosList = new ArrayList<>();
         duenosList.add(duenoNormal);
         duenosList.add(duenoConNegocio);
+        
+        // Crear DTOs válidos e inválidos
+        duenoDTO = new DuenoDTO();
+        duenoDTO.setFirstName("Juan");
+        duenoDTO.setLastName("García");
+        duenoDTO.setEmail("juan@example.com");
+        duenoDTO.setNumTelefono("652345678");
+        duenoDTO.setTokenDueno("TOKEN123");
+        duenoDTO.setUsername("juangarcia");
+        duenoDTO.setPassword("password123");
+        
+        duenoInvalidoDTO = new DuenoDTO();
+        // Sin campos requeridos
+        
+        duenosDTOList = new ArrayList<>();
+        duenosDTOList.add(duenoDTO);
+        
+        // Configurar comportamiento básico del servicio de dueño
+        when(duenoService.convertirDuenoDTO(any(Dueno.class))).thenReturn(duenoDTO);
+        when(duenoService.convertirDTODueno(any(DuenoDTO.class))).thenReturn(duenoNormal);
+        when(jwtService.getUserNameFromJwtToken(anyString())).thenReturn("admin");
+
+        // Configurar un usuario administrador para sortear la seguridad
+        adminAuthority = new Authorities();
+        adminAuthority.setId(100);
+        adminAuthority.setAuthority("admin");
+        
+        adminUser = new User();
+        adminUser.setId(999);
+        adminUser.setUsername("admin");
+        adminUser.setPassword("adminpass");
+        adminUser.setAuthority(adminAuthority);
+
+        // Configurar que el usuario actual (findCurrentUser) sea admin
+        when(userService.findCurrentUser()).thenReturn(adminUser);
     }
 
-    // TESTS PARA findAll()
-
+    /* TESTS PARA findAll() */
+    
     @Test
     void testFindAll_Success() throws Exception {
         // Arrange
@@ -140,7 +207,7 @@ public class DuenoControllerTest {
                 .andExpect(jsonPath("$[1].id", is(2)))
                 .andExpect(jsonPath("$[1].firstName", is("Ana")));
         
-        verify(duenoService, times(2)).getAllDuenos(); // Se llama 2 veces: una para verificar si está vacío y otra para devolver datos
+        verify(duenoService, times(2)).getAllDuenos();
     }
 
     @Test
@@ -156,12 +223,43 @@ public class DuenoControllerTest {
         verify(duenoService).getAllDuenos();
     }
 
-    // TESTS PARA findById()
+    /* TESTS PARA findAllDTO() */
+    
+    @Test
+    void testFindAllDTO_Success() throws Exception {
+        // Arrange
+        when(duenoService.getAllDuenos()).thenReturn(duenosList);
+        
+        // Act & Assert
+        mockMvc.perform(get("/api/duenos/dto")
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(2)));
+        
+        verify(duenoService, times(2)).getAllDuenos();
+        verify(duenoService, times(2)).convertirDuenoDTO(any(Dueno.class));
+    }
 
+    @Test
+    void testFindAllDTO_EmptyList() throws Exception {
+        // Arrange
+        when(duenoService.getAllDuenos()).thenReturn(Collections.emptyList());
+        
+        // Act & Assert
+        mockMvc.perform(get("/api/duenos/dto")
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNoContent());
+        
+        verify(duenoService).getAllDuenos();
+        verify(duenoService, never()).convertirDuenoDTO(any(Dueno.class));
+    }
+
+    /* TESTS PARA findById() */
+    
     @Test
     void testFindById_Success() throws Exception {
         // Arrange
-        when(duenoService.getDuenoById("1")).thenReturn(duenoNormal);
+        when(duenoService.getDuenoById(1)).thenReturn(duenoNormal);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/1")
@@ -169,26 +267,61 @@ public class DuenoControllerTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.firstName", is("Juan")))
-                .andExpect(jsonPath("$.lastName", is("García")));
+                .andExpect(jsonPath("$.lastName", is("García")))
+                .andExpect(jsonPath("$.email", is("juan@example.com")));
         
-        verify(duenoService).getDuenoById("1");
+        verify(duenoService).getDuenoById(1);
     }
 
     @Test
     void testFindById_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoById("999")).thenReturn(null);
+        when(duenoService.getDuenoById(999)).thenReturn(null);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/999")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoById("999");
+        verify(duenoService).getDuenoById(999);
     }
 
-    // TESTS PARA findByToken()
+    /* TESTS PARA findDTOById() */
+    
+    @Test
+    void testFindDTOById_Success() throws Exception {
+        // Arrange
+        when(duenoService.getDuenoById(1)).thenReturn(duenoNormal);
+        when(duenoService.convertirDuenoDTO(duenoNormal)).thenReturn(duenoDTO);
+        
+        // Act & Assert
+        mockMvc.perform(get("/api/duenos/dto/1")
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.firstName", is("Juan")))
+                .andExpect(jsonPath("$.lastName", is("García")))
+                .andExpect(jsonPath("$.email", is("juan@example.com")));
+        
+        verify(duenoService).getDuenoById(1);
+        verify(duenoService).convertirDuenoDTO(duenoNormal);
+    }
 
+    @Test
+    void testFindDTOById_NotFound() throws Exception {
+        // Arrange
+        when(duenoService.getDuenoById(999)).thenReturn(null);
+        
+        // Act & Assert
+        mockMvc.perform(get("/api/duenos/dto/999")
+                .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isNotFound());
+        
+        verify(duenoService).getDuenoById(999);
+        verify(duenoService, never()).convertirDuenoDTO(any(Dueno.class));
+    }
+
+    /* TESTS PARA findByToken() */
+    
     @Test
     void testFindByToken_Success() throws Exception {
         // Arrange
@@ -201,24 +334,24 @@ public class DuenoControllerTest {
                 .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.firstName", is("Juan")));
         
-        verify(duenoService, times(2)).getDuenoByToken("TOKEN123"); // Se llama 2 veces en el controlador
+        verify(duenoService, times(2)).getDuenoByToken("TOKEN123");
     }
 
     @Test
     void testFindByToken_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByToken("INVALID_TOKEN")).thenReturn(null);
+        when(duenoService.getDuenoByToken("NONEXISTENT")).thenReturn(null);
         
         // Act & Assert
-        mockMvc.perform(get("/api/duenos/token/INVALID_TOKEN")
+        mockMvc.perform(get("/api/duenos/token/NONEXISTENT")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoByToken("INVALID_TOKEN");
+        verify(duenoService).getDuenoByToken("NONEXISTENT");
     }
 
-    // TESTS PARA findByEmail()
-
+    /* TESTS PARA findByEmail() */
+    
     @Test
     void testFindByEmail_Success() throws Exception {
         // Arrange
@@ -229,9 +362,9 @@ public class DuenoControllerTest {
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id", is(1)))
-                .andExpect(jsonPath("$.email", is("juan@example.com")));
+                .andExpect(jsonPath("$.firstName", is("Juan")));
         
-        verify(duenoService, times(2)).getDuenoByEmail("juan@example.com"); // Se llama 2 veces en el controlador
+        verify(duenoService, times(2)).getDuenoByEmail("juan@example.com");
     }
 
     @Test
@@ -247,18 +380,20 @@ public class DuenoControllerTest {
         verify(duenoService).getDuenoByEmail("nonexistent@example.com");
     }
 
-    // TESTS PARA findByNombre()
-
+    /* TESTS PARA findByNombre() */
+    
     @Test
     void testFindByNombre_Success() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByNombre("Juan")).thenReturn(Collections.singletonList(duenoNormal));
+        List<Dueno> duenosJuan = List.of(duenoNormal);
+        when(duenoService.getDuenoByNombre("Juan")).thenReturn(duenosJuan);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/nombre/Juan")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].id", is(1)))
                 .andExpect(jsonPath("$[0].firstName", is("Juan")));
         
         verify(duenoService).getDuenoByNombre("Juan");
@@ -267,48 +402,50 @@ public class DuenoControllerTest {
     @Test
     void testFindByNombre_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByNombre("Inexistente")).thenReturn(Collections.emptyList());
+        when(duenoService.getDuenoByNombre("Nonexistent")).thenReturn(Collections.emptyList());
         
         // Act & Assert
-        mockMvc.perform(get("/api/duenos/nombre/Inexistente")
+        mockMvc.perform(get("/api/duenos/nombre/Nonexistent")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoByNombre("Inexistente");
+        verify(duenoService).getDuenoByNombre("Nonexistent");
     }
 
-    // TESTS PARA findByApellido()
-
+    /* TESTS PARA findByApellido() */
+    
     @Test
     void testFindByApellido_Success() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByApellido("García")).thenReturn(Collections.singletonList(duenoNormal));
+        List<Dueno> duenosGarcia = List.of(duenoNormal);
+        when(duenoService.getDuenoByApellido("García")).thenReturn(duenosGarcia);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/apellido/García")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].id", is(1)))
                 .andExpect(jsonPath("$[0].lastName", is("García")));
         
-        verify(duenoService, times(2)).getDuenoByApellido("García"); // Se llama 2 veces en el controlador
+        verify(duenoService, times(2)).getDuenoByApellido("García");
     }
 
     @Test
     void testFindByApellido_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByApellido("Inexistente")).thenReturn(Collections.emptyList());
+        when(duenoService.getDuenoByApellido("Nonexistent")).thenReturn(Collections.emptyList());
         
         // Act & Assert
-        mockMvc.perform(get("/api/duenos/apellido/Inexistente")
+        mockMvc.perform(get("/api/duenos/apellido/Nonexistent")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoByApellido("Inexistente");
+        verify(duenoService).getDuenoByApellido("Nonexistent");
     }
 
-    // TESTS PARA findByTelefono()
-
+    /* TESTS PARA findByTelefono() */
+    
     @Test
     void testFindByTelefono_Success() throws Exception {
         // Arrange
@@ -318,9 +455,10 @@ public class DuenoControllerTest {
         mockMvc.perform(get("/api/duenos/telefono/652345678")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.numTelefono", is("652345678")));
         
-        verify(duenoService, times(2)).getDuenoByTelefono("652345678"); // Se llama 2 veces en el controlador
+        verify(duenoService, times(2)).getDuenoByTelefono("652345678");
     }
 
     @Test
@@ -336,82 +474,95 @@ public class DuenoControllerTest {
         verify(duenoService).getDuenoByTelefono("999999999");
     }
 
-    // TESTS PARA findByUser()
-
+    /* TESTS PARA findByUser() */
+    
     @Test
     void testFindByUser_Success() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByUser("1")).thenReturn(duenoNormal);
+        when(duenoService.getDuenoByUser(1)).thenReturn(duenoNormal);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/user/1")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.id", is(1)));
+                .andExpect(jsonPath("$.id", is(1)))
+                .andExpect(jsonPath("$.firstName", is("Juan")));
         
-        verify(duenoService, times(2)).getDuenoByUser("1"); // Se llama 2 veces en el controlador
+        verify(duenoService, times(2)).getDuenoByUser(1);
     }
 
     @Test
     void testFindByUser_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoByUser("999")).thenReturn(null);
+        when(duenoService.getDuenoByUser(999)).thenReturn(null);
         
         // Act & Assert
         mockMvc.perform(get("/api/duenos/user/999")
                 .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoByUser("999");
+        verify(duenoService).getDuenoByUser(999);
     }
 
-    // TESTS PARA save()
-
+    /* TESTS PARA save() */
+    
     @Test
     void testSave_Success() throws Exception {
         // Arrange
+        when(userService.findUserByUsername(anyString())).thenReturn(null);
         when(duenoService.saveDueno(any(Dueno.class))).thenReturn(duenoNormal);
-            
+        
         // Act & Assert
         mockMvc.perform(post("/api/duenos")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(duenoNormal)))
+                .content(objectMapper.writeValueAsString(duenoDTO)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id", is(1)))
                 .andExpect(jsonPath("$.firstName", is("Juan")));
         
+        verify(duenoService).convertirDTODueno(any(DuenoDTO.class));
+        verify(userService).findUserByUsername(anyString());
         verify(duenoService).saveDueno(any(Dueno.class));
     }
 
     @Test
-    void testSave_NullDueno() throws Exception {
-        // Act & Assert - No podemos enviar un cuerpo nulo directamente, pero podemos probar con un objeto vacío
-        mockMvc.perform(post("/api/duenos")
-                .with(csrf())
-                .contentType(MediaType.APPLICATION_JSON)
-                .content("{}")) // Objeto JSON vacío
-                .andExpect(status().isBadRequest()); // Debería fallar la validación
-    }
-
-    @Test
-    void testSave_InvalidDueno() throws Exception {
+    void testSave_UsernameAlreadyExists() throws Exception {
         // Arrange
-        // No necesitamos configurar el mock porque esperamos una excepción de validación
+        when(userService.findUserByUsername(anyString())).thenReturn(user);
         
         // Act & Assert
         mockMvc.perform(post("/api/duenos")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(duenoInvalidoSinEmail)))
-                .andExpect(status().isBadRequest()); // Debería fallar la validación si hay restricciones @NotNull
+                .content(objectMapper.writeValueAsString(duenoDTO)))
+                .andExpect(status().isConflict());
+        
+        verify(duenoService).convertirDTODueno(any(DuenoDTO.class));
+        verify(userService).findUserByUsername(anyString());
+        verify(duenoService, never()).saveDueno(any(Dueno.class));
+    }
+    
+    @Test
+    void testSave_ValidationError() throws Exception {
+        // Act & Assert
+        mockMvc.perform(post("/api/duenos")
+                .with(csrf())
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(duenoInvalidoDTO)))
+                .andExpect(status().isBadRequest());
+        
+        verify(duenoService, never()).saveDueno(any(Dueno.class));
     }
 
-    // TESTS PARA update()
-
+    /* TESTS PARA update() */
+    
     @Test
     void testUpdate_Success() throws Exception {
         // Arrange
+        when(duenoService.getDuenoById(1)).thenReturn(duenoNormal);
+        when(userService.findUserByUsername(anyString())).thenReturn(null);
+        
         Dueno duenoActualizado = new Dueno();
         duenoActualizado.setId(1);
         duenoActualizado.setFirstName("Juan Actualizado");
@@ -419,78 +570,113 @@ public class DuenoControllerTest {
         duenoActualizado.setEmail("juan@example.com");
         duenoActualizado.setNumTelefono("652345678");
         duenoActualizado.setTokenDueno("TOKEN123");
+        duenoActualizado.setUser(user);
         
-        when(duenoService.getDuenoById("1")).thenReturn(duenoNormal);
         when(duenoService.saveDueno(any(Dueno.class))).thenReturn(duenoActualizado);
+        
+        // Asegurar que todos los campos requeridos estén presentes
+        DuenoDTO duenoActualizadoDTO = new DuenoDTO();
+        duenoActualizadoDTO.setFirstName("Juan Actualizado");
+        duenoActualizadoDTO.setLastName("García");
+        duenoActualizadoDTO.setEmail("juan@example.com");
+        duenoActualizadoDTO.setNumTelefono("652345678");
+        duenoActualizadoDTO.setTokenDueno("TOKEN123");
+        duenoActualizadoDTO.setUsername("juangarcia");
+        duenoActualizadoDTO.setPassword("password123");
+        
+        when(duenoService.convertirDTODueno(any(DuenoDTO.class))).thenReturn(duenoActualizado);
         
         // Act & Assert
         mockMvc.perform(put("/api/duenos/1")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(duenoActualizado)))
+                .content(objectMapper.writeValueAsString(duenoActualizadoDTO)))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.firstName", is("Juan Actualizado")));
         
-        verify(duenoService).getDuenoById("1");
+        verify(duenoService, times(2)).getDuenoById(1);
+        verify(duenoService).convertirDTODueno(any(DuenoDTO.class));
         verify(duenoService).saveDueno(any(Dueno.class));
     }
-
+    
     @Test
     void testUpdate_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoById("999")).thenReturn(null);
+        when(duenoService.getDuenoById(999)).thenReturn(null);
         
         // Act & Assert
         mockMvc.perform(put("/api/duenos/999")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(duenoNormal)))
+                .content(objectMapper.writeValueAsString(duenoDTO)))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoById("999");
+        verify(duenoService).getDuenoById(999);
         verify(duenoService, never()).saveDueno(any(Dueno.class));
     }
-
+    
     @Test
-    void testUpdate_NullDueno() throws Exception {
+    void testUpdate_UsernameConflict() throws Exception {
+        // Arrange
+        when(duenoService.getDuenoById(1)).thenReturn(duenoNormal);
+        
+        // Simular que el username ya está en uso pero por otro usuario
+        User conflictUser = new User();
+        conflictUser.setId(5);
+        when(userService.findUserByUsername(anyString())).thenReturn(conflictUser);
+        
         // Act & Assert
         mockMvc.perform(put("/api/duenos/1")
                 .with(csrf())
                 .contentType(MediaType.APPLICATION_JSON)
-                .content("{}")) // Objeto JSON vacío
-                .andExpect(status().isBadRequest()); // Cambiado a BAD_REQUEST (400)
+                .content(objectMapper.writeValueAsString(duenoDTO)))
+                .andExpect(status().isConflict());
+        
+        verify(duenoService, times(2)).getDuenoById(1);
+        verify(userService).findUserByUsername(anyString());
+        verify(duenoService, never()).saveDueno(any(Dueno.class));
+    }
+    
+    @Test
+    void testUpdate_ValidationError() throws Exception {
+        // Act & Assert
+        mockMvc.perform(put("/api/duenos/1")
+                .with(csrf())
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(duenoInvalidoDTO)))
+                .andExpect(status().isBadRequest());
+        
+        verify(duenoService, never()).saveDueno(any(Dueno.class));
     }
 
-    // TESTS PARA delete()
-
+    /* TESTS PARA delete() */
+    
     @Test
     void testDelete_Success() throws Exception {
         // Arrange
-        when(duenoService.getDuenoById("1")).thenReturn(duenoNormal);
-        doNothing().when(duenoService).deleteDueno("1");
+        when(duenoService.getDuenoById(1)).thenReturn(duenoNormal);
+        doNothing().when(duenoService).deleteDueno(1);
         
         // Act & Assert
         mockMvc.perform(delete("/api/duenos/1")
-                .with(csrf())
-                .contentType(MediaType.APPLICATION_JSON))
+                .with(csrf()))
                 .andExpect(status().isNoContent());
         
-        verify(duenoService).getDuenoById("1");
-        verify(duenoService).deleteDueno("1");
+        verify(duenoService).getDuenoById(1);
+        verify(duenoService).deleteDueno(1);
     }
 
     @Test
     void testDelete_NotFound() throws Exception {
         // Arrange
-        when(duenoService.getDuenoById("999")).thenReturn(null);
+        when(duenoService.getDuenoById(999)).thenReturn(null);
         
         // Act & Assert
         mockMvc.perform(delete("/api/duenos/999")
-                .with(csrf())
-                .contentType(MediaType.APPLICATION_JSON))
+                .with(csrf()))
                 .andExpect(status().isNotFound());
         
-        verify(duenoService).getDuenoById("999");
-        verify(duenoService, never()).deleteDueno("999");
+        verify(duenoService).getDuenoById(999);
+        verify(duenoService, never()).deleteDueno(anyInt());
     }
 }
